# AzuriteLang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  main.az
.github/workflows/: installer.yml
.opencode/: rules.md
azurite_checker/: Cargo.toml
azurite_checker/src/: checker.rs  lib.rs  symbol.rs  types.rs
azurite_checker/src/checker/: expr.rs  mod.rs  stmt.rs
azurite_cli/: Cargo.toml
azurite_cli/src/: main.rs
azurite_codegen/: Cargo.toml
azurite_codegen/src/: codegen.rs  dummy.rs  lib.rs
azurite_codegen/src/codegen/: builtin.rs  class.rs  expr.rs  mod.rs
azurite_codegen/src/codegen/expr/: array.rs  call.rs  control.rs  io.rs  literal.rs  math.rs  mod.rs  operator.rs  stri.rs
azurite_errors/: Cargo.toml
azurite_errors/src/: diagnostic.rs  error.rs  lib.rs
azurite_lexer/: Cargo.toml
azurite_lexer/src/: lexer.rs  lib.rs  token.rs
azurite_parser/: Cargo.toml
azurite_parser/src/: ast.rs  parser.rs
azurite_parser/src/ast/: expr.rs  ident.rs  mod.rs  op.rs  stmt.rs  type_.rs
azurite_parser/src/parser/: expr.rs  mod.rs  pattern.rs  stmt.rs  type_.rs
azurite_resolver/: Cargo.toml
azurite_resolver/src/: lib.rs  manifest.rs  resolver.rs
azurite_test/: Cargo.toml
azurite_test/src/: lib.rs
azurite_test/tests/: advanced_features.rs  array_runtime.rs  checker_edge.rs  checker_errors.rs  checker_types.rs  classes.rs  enums_arrays.rs  error_edge_cases.rs  features.rs  generics.rs  integration_programs.rs  integration_spans.rs  lexer_comments.rs  lexer_errors.rs  lexer_identifiers.rs  lexer_keywords.rs  lexer_numbers.rs  lexer_operators.rs  lexer_spans.rs  lexer_strings.rs  match_for_strings.rs  new_features.rs  parser_control_flow.rs  parser_errors.rs  parser_expressions.rs  parser_functions.rs  parser_literals.rs  parser_precedence.rs  parser_statements.rs  resolver.rs
examples/: big_demo.az  class.az  class_person.az  gen_expr.az  gen_float.az  gen_method.az  gen_multi.az  gen_pair.az  gen_string.az  gen_test.az  hello.az  inherit.az  inherit2.az  inherit3.az  stdlib_demo.az  tokenizer.az
installer/: README.md  build-installer.bat  setup.iss
libs/collections/: hash_map.az  hash_set.az  lib.az  linked_list.az  priority_queue.az  queue.az  stack.az
libs/datetime/: lib.az
libs/encoding/: lib.az
libs/fs/: lib.az
libs/logging/: lib.az
libs/testing/: lib.az
libs/text/: lib.az
