[package]
name = "azurite_codegen"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
azurite_lexer = { path = "../azurite_lexer" }
azurite_parser = { path = "../azurite_parser" }
azurite_errors = { path = "../azurite_errors" }
inkwell = { version = "0.9", optional = true, default-features = false, features = ["llvm22-1", "target-x86", "target-arm", "target-aarch64"] }

[features]
default = []
llvm = ["dep:inkwell"]
