[package]
name = "azurite_test"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
azurite_lexer = { path = "../azurite_lexer" }
azurite_parser = { path = "../azurite_parser" }
azurite_checker = { path = "../azurite_checker" }
azurite_errors = { path = "../azurite_errors" }
